fixed white space

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,12 @@ body, html {
     height: 100%;
 }
 
+main {
+    overflow:auto;
+    position:relative;
+    z-index: 2;
+}
+
 img {
     height: 25px;
     width: 25px;
@@ -37,12 +43,15 @@ img {
     background-size: cover;
     height: 100vh;
     width: 100vw;
+    position:absolute;
+    
 }
 
 .homePage {
     height: 100vh;
     width: 100vw;
     margin: auto;
+    max-height:100vh;
 }
 
 .homePage .weather {
